# volume-flow-crypto

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
src/volume_flow/: __init__.py  live.py  models.py
src/volume_flow/app/: __init__.py  dashboard.py
src/volume_flow/metrics/: __init__.py  signals.py  volume.py
src/volume_flow/providers/: __init__.py  binance.py  errors.py  streaming.py
tests/: test_live.py  test_smoke.py
tests/app/: test_dashboard.py
tests/fixtures/: btcusdt_1h.json  btcusdt_agg_trade.json  btcusdt_kline_event.json
tests/metrics/: test_signals.py  test_volume.py
tests/providers/: test_binance.py  test_streaming.py
