[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volume-flow-crypto"
version = "0.1.0"
description = "Real buy-side vs. sell-side crypto volume from Binance public market data."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Anthony" }]
dependencies = [
    "pandas>=2.0",
    "streamlit>=1.30",
    "requests>=2.0",
    "websockets>=16.0",
    "altair>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/volume_flow"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["requests.*", "pandas.*"]
ignore_missing_imports = true
